<resources>
    <string name="app_name">外卖说</string>
    <string name="company_info">
        外卖说（深圳）科技有限公司\n粤ICP备20060292号\n公安备案号：44030502006664\n增值电信业务经营许可证:粤B2-20210051
    </string>
    <string name="waimai_goods_default_spec_str">默认</string>
    <string name="default_second_kill_time">00</string>
    <string name="waimai">外卖</string>
    <string name="mall">商城</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="share">分享</string>
    <string name="feedback">反馈</string>
    <string name="agreement">《用户服务协议》</string>
    <string name="policy">《隐私政策》</string>
    <string name="zh_money_symbol">￥</string>
    <string name="members_center">会员中心</string>
    <string name="login_by_machine">本机号码一键登录</string>
    <string name="login_by_phone">手机号登录</string>
    <string name="login_by_other">使用其他手机号登录</string>
    <string name="login_tip_login_by_other">其他登录方式</string>
    <string name="login_tip">未注册手机号登陆后将自动生成账号，且代表您已阅读并同意</string>
    <string name="login_tip_bottom">登录即同意用户协议.隐私条款</string>
    <string name="input_phoneNumber">请输入手机号</string>
    <string name="input_phoneNumber_or_QQ">请输入手机号/QQ</string>
    <string name="login">登录</string>
    <string name="verification">验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="login_please">请登录</string>
    <string name="more_recommended">更多推荐</string>
    <string name="search">搜索</string>
    <string name="pay">付款</string>
    <string name="cancel">取消</string>
    <string name="cancel_order">取消订单</string>
    <string name="read_all_message_bt">全部已读</string>
    <string name="read_all_message_success_tip">全部消息已读</string>
    <string name="placed_at_the_top">置顶</string>
    <string name="deleted">删除</string>
    <string name="score">分</string>
    <string name="limited">限量</string>
    <string name="goods_units">份</string>
    <string name="sheet">张</string>
    <string name="remaining">剩余</string>
    <string name="remaining_coupon">卷剩余</string>
    <string name="arrive_in_minutes">分钟送达</string>
    <string name="arrive_in_minutes_2">分钟</string>
    <string name="price_of_sending">起送</string>
    <string name="sale_count_a_month">月售</string>
    <string name="favorable_rate">评分</string>
    <string name="number_of_fans">粉丝数%s万</string>
    <string name="notice">公告</string>
    <string name="notice_content">公告：%s</string>
    <string name="preferential">优惠</string>
    <string name="more_preferential">%d个优惠</string>
    <string name="shop_mon_sale_count_and_dist_time">月售%1$s+ 配送%2$d分钟</string>
    <string name="shop_mon_sale_count_and_favorable_rate">月售%1$s 好评%2$d%%</string>
    <string name="tv_sign_in_members">入会有礼</string>
    <string name="tv_show_qr_code">显示二维码</string>
    <string name="verification_by_scan_qr">请扫描一下二维码验证</string>
    <string name="connect_merchants">联系商家</string>
    <string name="to_settle_accounts">去结算</string>
    <string name="submit_order">提交订单</string>
    <string name="chose_specification">选规格</string>
    <string name="go_spell_list">去拼单</string>
    <string name="screen">筛选</string>
    <string name="location_unknow">未知</string>
    <string name="exclusive_breakfast">专属早餐</string>
    <string name="more_shop">更多好店</string>
    <string name="recent_place_order_count">最近有人%s下单</string>
    <string name="qw_seconds_kill_to_snap_up">秒杀抢购</string>
    <string name="qw_find_good_goods">发现好物</string>
    <string name="qw_find_good_goods_sign">品质好物</string>
    <string name="qw_daily_good_shops">每日好店</string>
    <string name="qw_daily_good_shops_sign">精选</string>
    <string name="qw_fashion_accessories">时尚配饰</string>
    <string name="qw_fashion_accessories_sign">品牌正品</string>
    <string name="limited_second_kill">限时秒杀</string>
    <string name="limited_second_kill_price">￥%s秒杀价</string>
    <string name="limited_divider_price">配送￥</string>
    <string name="city_picker">城市选择</string>
    <string name="current_positioning_city">当前定位城市</string>
    <string name="search_by_input_city_name">输入城市名或拼音进行搜索</string>
    <string name="red_packet">红包</string>
    <string name="preferential_activity">优惠活动</string>
    <string name="merchants_service">商家服務</string>
    <string name="receive_now">立即领取</string>
    <string name="receive">领取</string>
    <string name="received">已领取</string>
    <string name="merchants_score">商家评分</string>
    <string name="deliver_satisfaction">配送满意度</string>
    <string name="packing">包装</string>
    <string name="taste">味道</string>
    <string name="merchants_info">商家信息</string>
    <string name="report_merchants">举报商家</string>
    <string name="report_content">举报内容</string>
    <string name="brand_introduce">品牌介绍</string>
    <string name="video_introduce">视频介绍</string>
    <string name="empty">清空</string>
    <string name="merchant_reply">卖家回复</string>
    <string name="super_member">超级会员</string>
    <string name="pay_type">支付方式</string>
    <string name="distribution_time">配送时间</string>
    <string name="distribution_minute">配送%s分钟</string>
    <string name="dist_time_and_distance">%1$s分钟&#160;&#160;%2$skm</string>
    <string name="price_start_deliver_delivering_avg">起送%1$s元&#160;&#160;配送%2$s元&#160;&#160;人均%3$s元</string>
    <string name="reserved_phone">预留电话</string>
    <string name="time_of_take_the_meal">取餐时间</string>
    <string name="type_of_take_the_meal">取餐方式</string>
    <string name="pak_out">打包带走</string>
    <string name="chose_pay_type">选择支付方式</string>
    <string name="store_dining">店内就餐</string>
    <string name="please_select_time_to_take_meal">请选择取餐时间</string>
    <string name="please_select_red_packet">请选择红包</string>
    <string name="tableware_note">餐具备份</string>
    <string name="order_info">订单信息</string>
    <string name="order_note">订单备注</string>
    <string name="preferential_introduce">优惠说明</string>
    <string name="subtotal">小计</string>
    <string name="the_number_of_take_food">取餐号</string>
    <string name="order_number">订单号</string>
    <string name="copy">复制</string>
    <string name="place_the_order_of_time">下单时间</string>
    <string name="shopping_cart">购物车</string>
    <string name="shop">店铺</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="the_prices_instructions_according_specification">说明：商品价格会根据所选规格变化</string>
    <string name="reset">重置</string>
    <string name="finish">完成</string>
    <string name="note_hint_text">填写额外对商家和外卖小哥的备注信息</string>
    <string name="usual_note">常用备注</string>
    <string name="text_input_number">%1$d/%2$d个字</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="max_num_of_selected_picture">(最多可添加%1$s张图片)</string>
    <string name="evaluation">评价</string>
    <string name="go_pay">去支付</string>
    <string name="connect_online">在线联系</string>
    <string name="connect_driver">电话骑手</string>
    <string name="deleted_order">删除订单</string>
    <string name="after_sale_process">售后进度</string>
    <string name="goods_number">等%1$s件</string>
    <string name="goods_number_2">共%1$s件</string>
    <string name="goods_price">￥%1$s元</string>
    <string name="receipt_confirm">确认签收</string>
    <string name="driver_info">骑手信息</string>
    <string name="lengthen_receipt_time">延长收货</string>
    <string name="application_for_drawback">申请退款</string>
    <string name="remind_shipment">提醒发货</string>
    <string name="sure_cancel_order">您确定取消订单吗</string>
    <string name="dial">拨号</string>
    <string name="sure_receipt_confirm">是否确认签收？</string>
    <string name="lengthen_sure_receipt">您确定要延长收货吗</string>
    <string name="order">订单</string>
    <string name="search_my_order">搜索我的订单</string>
    <string name="packaging">包装</string>
    <string name="quality">质量</string>
    <string name="anonymous_to_driver">已对骑手匿名</string>
    <string name="submit_comment">提交评价</string>
    <string name="hint_text_shop_comment">口味好，包装好，推荐给大家</string>
    <string name="hint_text_driver_comment">请对骑手的配送服务进行评价~</string>
    <string name="release">发布</string>
    <string name="release_comment">发布</string>
    <string name="describe_consistent">描述相符</string>
    <string name="logistics_service">物流服务</string>
    <string name="service">服务</string>
    <string name="service_attitude">服务态度</string>
    <string name="hint_text_mall_comment">从多个角度评价商品，可以帮助更多想买的人</string>
    <string name="deliver_info">配送信息</string>
    <string name="delivery_time">送达时间</string>
    <string name="harvest_address">收货地址</string>
    <string name="distribution_type">配送方式</string>
    <string name="waiting_for_merchant_delivery">等待商家配送</string>
    <string name="wait_for_pay">等待支付</string>
    <string name="pay_ASAP">请尽快支付</string>
    <string name="merchants_are_stocking_up">商家正在备货</string>
    <string name="waimaishuo_deliver">外卖说快送</string>
    <string name="reminder">催单</string>
    <string name="order_delivered">订单已送达</string>
    <string name="thank_words_order_finish">感谢您的信任，期待下次光临</string>
    <string name="one_mode_order">再来一单</string>
    <string name="apply_after_sales">申请售后</string>
    <string name="refund">退款</string>
    <string name="refund_return">退货退款</string>
    <string name="want_refund">我要退款</string>
    <string name="want_refund_return_goods">我要退货退款</string>
    <string name="chose_service_type">选择服务类型</string>
    <string name="refund_reason">退货原因</string>
    <string name="please_input">请输入…</string>
    <string name="goods_state">货物状态</string>
    <string name="refund_price">退款金额</string>
    <string name="not_received_goods">未收到货</string>
    <string name="have_received_goods">已收到货</string>
    <string name="refund_info">退款信息</string>
    <string name="modify_application">修改申请</string>
    <string name="cancel_the_application">撤销申请</string>
    <string name="customer_service">客服</string>
    <string name="connect_customer_service">联系客服</string>
    <string name="merchants_address">商家收货地址</string>
    <string name="contact_name">联系人</string>
    <string name="contact_number">联系号码</string>
    <string name="contact_phone">联系电话</string>
    <string name="logistics_number">物流单号</string>
    <string name="filling_logistics_order_number">填写物流单号</string>
    <string name="filling_phoneNumber">填写手机号</string>
    <string name="return_goods">寄回商品</string>
    <string name="connect_third_party_customer_service">联系第三方客服</string>
    <string name="refund_detail">退款详情</string>
    <string name="fail_detail">失败详情</string>
    <string name="confirm_order">确认订单</string>
    <string name="more_pay_type">更多支付方式</string>
    <string name="real_payment">实付款</string>
    <string name="view_logistics">查看物流</string>
    <string name="wait_for_deliver">待配送</string>
    <string name="delivering">配送中</string>
    <string name="sign_for_goods">已签收</string>
    <string name="expressage_delivering">快递配送中</string>
    <string name="intra_city_service_delivering">同城配送中</string>
    <string name="complete_transaction">交易完成</string>
    <string name="buy_now">立即购买</string>
    <string name="phoneNumber">手机号</string>
    <string name="clean_the_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="cancellation_of_account">注销账号</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="quick_login">退出账号</string>
    <string name="select_picture">从手机相册选择</string>
    <string name="save_picture">保存图片</string>
    <string name="take_picture">拍照</string>
    <string name="intended_city_for_work">意向工作城市</string>
    <string name="intended_place_for_work">意向工作地点</string>
    <string name="intended_type_for_work">意向工作类型</string>
    <string name="rider_name">骑手姓名</string>
    <string name="rider_type_one">众包骑手</string>
    <string name="rider_type_two">专业骑手</string>
    <string name="rider_type_one_introduce">自由接单 灵活结算</string>
    <string name="rider_type_two_introduce">全职工作 收入稳定</string>
    <string name="sign_up_to_become_rider">报名成为骑手</string>
    <string name="tip_wait_for_feedback">*请填写以上信息，三个工作日内得到反馈</string>
</resources>