<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <com.life.base.views.UiAdapterLinearLayout
        android:id="@+id/my_ll_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_title"
            layout="@layout/title_simple" />

        <TextView style="@style/divider" />

        <TextView
            android:id="@+id/tv_clean_the_cache"
            style="@style/text_setting"
            android:text="@string/clean_the_cache" />

        <TextView style="@style/divider_default_interval" />

        <TextView
            android:id="@+id/tv_about_us"
            style="@style/text_setting"
            android:text="@string/about_us" />

        <TextView style="@style/divider_default_interval" />

        <TextView
            android:id="@+id/tv_privacy_agreement"
            style="@style/text_setting"
            android:text="@string/privacy_agreement" />

        <TextView style="@style/divider_default_interval" />

        <TextView
            android:id="@+id/tv_cancellation_of_account"
            style="@style/text_setting"
            android:text="@string/cancellation_of_account" />

        <TextView style="@style/divider_default_interval" />

        <TextView
            android:id="@+id/tv_feedback"
            style="@style/text_setting"
            android:text="@string/opinion_feedback" />

        <TextView style="@style/divider_default_interval" />

        <Button
            android:id="@+id/bt_quit_login"
            style="@style/bt_bottom_gradient"
            android:layout_marginTop="80px"
            android:text="@string/quick_login" />

    </com.life.base.views.UiAdapterLinearLayout>
</layout>