<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.life.waimaishuo.mvvm.vm.waimai.ShopDetailViewModel" />
    </data>

    <com.life.base.views.UiAdapterLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sr_bg_tl_tr_12dp_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_take_picture"
            android:layout_width="match_parent"
            android:layout_height="114px"
            android:background="@drawable/sl_white_to_gray_top_radius"
            android:gravity="center"
            android:text="@string/take_picture"
            android:textColor="@color/text_normal"
            android:textSize="36px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/background2" />

        <TextView
            android:id="@+id/tv_select_picture"
            android:layout_width="match_parent"
            android:layout_height="114px"
            android:background="@drawable/sl_white_to_gray"
            android:gravity="center"
            android:text="@string/select_picture"
            android:textColor="@color/text_normal"
            android:textSize="36px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/background2" />

        <TextView
            android:id="@+id/tv_save_picture"
            android:layout_width="match_parent"
            android:layout_height="114px"
            android:background="@drawable/sl_white_to_gray"
            android:gravity="center"
            android:text="@string/save_picture"
            android:textColor="@color/text_normal"
            android:textSize="36px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="16px"
            android:background="@color/background2" />

        <TextView
            android:id="@+id/tv_cancel_picture"
            android:layout_width="match_parent"
            android:layout_height="114px"
            android:background="@drawable/sl_white_to_gray"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_normal"
            android:textSize="36px" />

    </com.life.base.views.UiAdapterLinearLayout>
</layout>
